--- a/style.css
+++ b/style.css
@@ -5,3 +5,26 @@ body{
 .image1{
     margin-left:30px;
 }
+.heading{
+    margin-left: 470px;
+    margin-top: -100px;
+}
+
+#p1{
+   
+}
+#searchbar{
+    margin-left: 15%;
+}
+.details{
+    margin-left:70px;
+}
+#button{
+     margin-left:70px;
+     border: none;
+     color:black;
+     background-color: blue;
+     height: 40px;
+     width: 300px;
+     
+}
