--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
 *{
-    background-color:#5D78A1
-    ;
+    background-color:#5D78A1;
+    
+
+}
+.details>p{
+    color: white;
+    margin-bottom: 10%;
+    font-weight: bold;
+    font-size: x-large;
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+    padding: 15%;
+    width: 20%;
+    border: 2px solid black;
+}
+.details>input{
+    border: 2px solid black;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: #E0FFFF;
+}
+.create_button{
+    margin-left: 35%;
+
 }
