--- a/style.css
+++ b/style.css
@@ -6,20 +6,30 @@ body{
     background-position-x: center;
     width: 1010px;
     height: 796px;
+   
 }
 
 .sign_up_form{
+    padding-left: 30%;
     width: 80%;
-    height: 800px;
+    height: 100vh;
     margin-left: 500px;
-    margin-top: -16%;
+    margin-top: -20%;
     margin-bottom: 500px;   
     background-color: #5D78A1;
-    padding:2% 5% ;
-    text-align: center;
     background-size: 80%;
     color:white;
     border-radius: 10px;
+    padding-top: 1%;
+
+    
+}
+
+.sign_up_form h2{
+   padding-left: 20%;
+   padding-top: 5%;
+   font-size: xx-large;
+  
 }
 
 .input-box{
@@ -27,12 +37,18 @@ body{
     border-radius: 10px;
     height: 50px;
     background-color: #E0FFFF;
-  
+      
+}
+.sign_up_form  input{
+padding-left: 2%;
 }
 
 .sign_up_form p{
-    margin-left: 10px;
+   /* margin-left: 10px;*/
     color:white;
+   font-size: x-large;
+   font-weight: bold;
+    
    
 }
  .signup_btn{
@@ -41,7 +57,9 @@ body{
      cursor: pointer;
      border-radius: 8px;
      width: 100px;
+     font-size: 20px;
  }
+
  img{
  margin-right: 1100px;
 
