--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
     width: 70%;
 }
 footer{
-    margin-top: 1%;
+    /* margin-top: 1%; */
     text-align: center;
     font-size: medium;
     background-color: #E0FFFF;
