--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 body {
   background-color: #6582AD;
 }
+
+.top {
+  position: absolute;
+  width: 547px;
+  height: 56px;
+  left: 250px;
+  top: 50px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+
+  color: #FFFFFF;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
