--- a/style.css
+++ b/style.css
@@ -19,3 +19,20 @@ body {
 
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.top2 {
+  position: absolute;
+  width: 345px;
+  height: 42px;
+  left: 355px;
+  top: 126px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 42px;
+
+  color: #FFFFFF;
+
+}
