--- a/style.css
+++ b/style.css
@@ -46,3 +46,19 @@ body {
 
   background: url(BOOKS.png);
 }
+
+#name {
+  position: absolute;
+  width: 126px;
+  height: 24px;
+  left: 202px;
+  top: 240px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+
+  color: #FFFFFF;
+}
