--- a/style.css
+++ b/style.css
@@ -79,3 +79,44 @@ body {
   color: #FFFFFF;
 
 }
+
+.option {
+  position: absolute;
+  width: 359px;
+  height: 21px;
+  left: 356px;
+  top: 511px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #FFFFFF;
+
+}
+
+.username {
+  position: absolute;
+  width: 426px;
+  height: 54px;
+  left: 150px;
+  top: 15px;
+  
+  background: #E0FFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+}
+
+.pass {
+  position: absolute;
+width: 426px;
+height: 54px;
+left: 150px;
+top: 15px;
+
+background: #E0FFFF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 15px;
+
+}
