--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
     filter: brightness(30%);
     filter: contrast(30%);
     filter: opacity(100%);
+    height: 1000px;
 }
 .adm button{
     border-radius: 10px;
