--- a/style.css
+++ b/style.css
@@ -8,31 +8,31 @@
      font-size: medium;
  }
  *{
-     padding: 0;
-     margin: 0;
-     box-sizing: border-box;
+    background-color: #5D78A1;
  }
  .word h2{
      font-style: italic;
     
  }
  .word{
+     margin-left: 25%;
+     color: white;
      
  }
  body{
      color: white;
-     background-image: url("images/books-5937823_960_720.webp");
+    
      background-repeat: no-repeat;
      background-size: cover;
+     height: 100vh;
  }
  .whole{
-     background-color: #5D78A1;
-     opacity: 0.8;
+     
+     
      width: 100%;
-     filter: brightness(30%);
-     filter: contrast(30%);
-     filter: opacity(100%);
-     height: 900px;
+     
+     
+     
  }
  .adm button{
      border-radius: 10px;
@@ -71,37 +71,46 @@
      display: flex;
  }
  form h3{
-     color: black;
+     color: white;
  }
  #admNumber{
      border-radius: 20px;
      height: 50px;
      width: 400px;
      border: 2px solid beige;
+     margin-top: 1%;
  }
  #nameBook{
     border-radius: 20px;
     height: 50px;
     width: 400px;
     border: 2px solid beige;
+    margin-top: 1%;
     }
 #bookSerial{
     border-radius: 20px;
     height: 50px;
     width: 400px;
     border: 2px solid beige;
+    margin-top: 1%;
 }  
 #dateBorrowed{
     border-radius: 20px;
     height: 50px;
     width: 400px;
     border: 2px solid beige;
+    margin-top: 1%;
 }  
 #sub{
     border-radius: 20px;
     height: 40px;
     width: 200px;
     border: 2px solid beige;
+    color: black;
+    font-weight: bold;
+    font-size: larger;
+  
+       
 }
 .blue{
     margin-bottom: 60px;
@@ -109,16 +118,34 @@
 }
 .label1{
     margin-top: 30px;
+    margin-left: 30%;
 }
 .label2{
     margin-top: 30px;
+    margin-left: 30%;
 }
 .label3{
     margin-top: 30px;
+    margin-left: 30%;
 }
 .blue{
     margin-top: 30px;
+     
+    
 }
+.labels{
+    margin-left: 30%;
+}
+.logo img{
+    height: 70px;
+    width: 80px;
+    
+
+}
+form{
+    display: flex;
+}
+
 
 
     
