--- a/login.css
+++ b/login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #6582AD;
+  background-color: #5D78A1;
 }
 
 .top {
@@ -56,8 +56,8 @@ body {
 
   font-family: Roboto;
   font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
+  font-weight: bold;
+  font-size: 20px;
   line-height: 28px;
 
   color: #FFFFFF;
@@ -72,8 +72,8 @@ body {
 
   font-family: roboto;
   font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
+  font-weight: bold;
+  font-size: 20px;
   line-height: 28px;
 
   color: #FFFFFF;
@@ -106,6 +106,7 @@ body {
   background: #E0FFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
+  border: none;
 }
 
 .pass {
@@ -118,7 +119,7 @@ top: 15px;
 background: #E0FFFF;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 border-radius: 15px;
-
+border: none;
 }
 
 #btn {
@@ -134,4 +135,5 @@ border-radius: 15px;
   border-radius: 15px;
   text-align: center;
   font-family: roboto;
+  border:none ;
 }
