--- a/css/SignUp.css
+++ b/css/SignUp.css
@@ -4,18 +4,18 @@ body{
     background-color: #E0FFFF;
     background-size: cover;
     background-position-x: center;
-    width: 1010px;
-    height: 796px;
+    width: 100%;
+    /* height: 796px; */
    
 }
 
 .sign_up_form{
-    padding-left: 30%;
-    width: 80%;
-    height: 100vh;
-    margin-left: 500px;
-    margin-top: -20%;
-    margin-bottom: 500px;   
+    padding-left: 25%;
+    width: 50%;
+    /* height: 100vh; */
+    margin-left: 10%;
+    /* margin-top: -20%; */
+    margin-bottom: 10%;   
     background-color: #5D78A1;
     background-size: 80%;
     color:white;
@@ -65,3 +65,15 @@ padding-left: 2%;
  margin-right: 1100px;
 
  }
+
+ button{
+    width: 166px;
+    height: 53px;
+    background: #E0FFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    text-align: center;
+    font-family: roboto;
+    border:none ;
+    
+  }
