--- a/css/login.css
+++ b/css/login.css
@@ -137,3 +137,14 @@ border: none;
   font-family: roboto;
   border:none ;
 }
+button{
+  width: 166px;
+  height: 53px;
+  background: #E0FFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  text-align: center;
+  font-family: roboto;
+  border:none ;
+  
+}
